--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
-node_modules
-.DS_Store
-dist
-
-Coverage
 coverage
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
+node_modules
+npm-debug.log
