--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "csvtojson": "^2.0.10",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.0",
+    "express-urlrewrite": "^1.2.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1"
